# cpp-bootstrap

./: .gitignore  CMakeLists.txt  README.md
common/: hello.cpp
include/: hello.h
src/: main.cpp
