cmake_minimum_required(VERSION 3.8)
project(cpp-bootstrap)

set(CMAKE_CXX_STANDARD 11)

set(CMAKE_BUILD_DIR ${CMAKE_SOURCE_DIR}/build)

set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR})
set(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR})

set(PROJECT_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/include)

include_directories(${PROJECT_INCLUDE_DIR})
include_directories(${PROJECT_SOURCE_DIR})

add_subdirectory(common)
add_subdirectory(src)